src/test/resources/syntactic/error/TC_ERROR_START_KEYS.ru
/? ERROR: SINTACTICO
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | LINEA 1 | COLUMNA 6 | SE ESPERABA: { Y SE ENCONTRO: } |
start}{